youfull/objects/SL_Market_KPIConfig__c.object
<CustomObject>
    <description>This is used to link a particular KPI to a Market and Leader Title Type for a given Context.</description>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <picklist>
            <picklistValues>
                <fullName>Title Achievement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Goal_To_Maximize_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal To Maximize Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leader_Title_Type__c</fullName>
        <label>Leader Title Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MarketHasBase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if there is a Base field for this KPI in this Market</description>
        <label>MarketHasBase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipName>MarketSLKPIConfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SL_KPIConfigName__c</fullName>
        <label>Zone KPI Configuration</label>
        <picklist>
            <picklistValues>
                <fullName>Personal Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1 Actives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incr G1 Actives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1 Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incr G1 Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1-3 Actives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Unit Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked Total Unit Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downline Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Titled Legs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>SortOrder</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SL_Market_KPIConfig</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SL_Market_KPIConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>